--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 </head>
 <body>
   This is a new branch
+  <div>This is a new div</div>
+  <p>Ths is a new paragraph</p>
+  <button>This is a new button</button>
 </body>
 </html>
